--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
             <div class="social-row">
                 <div class="fb-block"><button class="social-btn fb">
-        <img src="./img/facebook.svg" alt="fc-image">Facebook</a>
+        <img src="./img/facebook.svg" alt="fc-image">Facebook
       </button></div>
                 <div class="in-block"> <button class="social-btn in">
         <img src="./img/linkedin.svg" alt="in-image"> LinkedIn
